Fix padding for the MediaWiki navbar on smaller screens. Use the same padding for the navbar and MediaWiki navbar.

--- a/modules/aos_common.less
+++ b/modules/aos_common.less
@@ -8,6 +8,17 @@
   &:extend(.container);
 }
 
+.mw-header {
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+@media (min-width: @screen-sm-min) {
+    .mw-header {
+        padding: 8px 15px;
+    }
+}
+
 .mw-first-heading {
     margin: -2.5vw 0 0 0;
 }
